# gochu

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.sh  release.sh
.github/workflows/: release.yml
docs/: index.html  main.js  style.css  version.js
docs/pkg/: gochu_wasm.d.ts  gochu_wasm.js  gochu_wasm_bg.wasm  gochu_wasm_bg.wasm.d.ts  package.json
gochu-core/: Cargo.toml
gochu-core/src/: engine.rs  lib.rs  tone.rs  transform.rs  vowel.rs
gochu-fcitx5/: Cargo.toml  build.rs  install.sh
gochu-fcitx5/data/: gochu-im.conf  gochu.conf
gochu-fcitx5/shim/: shim.cpp
gochu-fcitx5/src/: lib.rs
gochu-ibus/: Cargo.toml  install.sh
gochu-ibus/data/: gochu.xml
gochu-ibus/src/: engine.rs  main.rs  text.rs
gochu-wasm/: Cargo.toml
gochu-wasm/src/: lib.rs
gochu-wasm/tests/: web.rs
web/: index.html  main.js  style.css
xtask/: Cargo.toml
xtask/src/: main.rs
