[package]
name = "gochu-ibus"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "gochu-ibus"
path = "src/main.rs"

[dependencies]
gochu-core = { path = "../gochu-core" }
zbus = { version = "4", default-features = false, features = ["tokio", "p2p"] }
tokio = { version = "1", features = ["macros", "rt"] }
serde = "1"
